--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <form action="index.php" method="POST" id="mail-form">
             <label for="firstname">First Name</label>
-            <input type="text" id="firstname" name="firstname" placeholder="first name" required>
+            <input type="text" id="firstname" name="firstname" placeholder="first name" required="required">
 
             <label for="lastname">Last Name</label>
             <input type="text" id="lastname" name="lastname" placeholder="last name" required>
@@ -31,6 +31,8 @@
 
             <label for="message">Your Message</label>
             <textarea name="message" id="message" cols="30" rows="10"></textarea>
+
+            <input type="submit" value="submit">
 
             <div class="submit-wrapper">
                 <span class="submit">Submit</span>
