--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <label for="message">Your Message</label>
             <textarea name="message" id="message" cols="30" rows="10"></textarea>
 
-            <input type="submit" value="submit">
+            <input type="tel" value="submit">
 
             <div class="submit-wrapper">
                 <span class="submit">Submit</span>
