--- a/index.html
+++ b/index.html
@@ -21,27 +21,25 @@
 
         <form action="index.php" method="POST" id="mail-form">
             <label for="firstname">First Name</label>
-            <input type="text" id="firstname" name="firstname" placeholder="first name" required="required">
+            <input ref="fname" type="text" id="firstname" name="firstname" placeholder="first name" required="required">
 
             <label for="lastname">Last Name</label>
-            <input type="text" id="lastname" name="lastname" placeholder="last name" required>
+            <input ref="lname" type="text" id="lastname" name="lastname" placeholder="last name" required>
 
             <label for="firstname">Email</label>
-            <input type="email" id="email" name="email" placeholder="email" required>
+            <input ref="email" type="email" id="email" name="email" placeholder="email" required>
 
             <label for="message">Your Message</label>
-            <textarea name="message" id="message" cols="30" rows="10"></textarea>
+            <textarea ref="message" name="message" id="message" cols="30" rows="10"></textarea>
 
-            <input type="tel" value="submit">
-
-            <div class="submit-wrapper">
-                <span class="submit">Submit</span>
-                <i class="fas fa-paper-plane"></i>
-            </div>
+            <label for="phone">Your Phone # <i>(optional)</i></label>
+            <input ref="phone" type="tel" value="tel" name="phone">
             
+            <input @click.prevent="processMail" type="submit" class="submit" value="submit">                               
         </form>
     </main>
 
-    <script src="js/main.js" type="module"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="js/main.js" type="module" defer></script>
 </body>
 </html>
