--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mail Ref</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -35,7 +36,8 @@
             <label for="phone">Your Phone # <i>(optional)</i></label>
             <input ref="phone" type="tel" value="tel" name="phone">
             
-            <input @click.prevent="processMail" type="submit" class="submit" value="submit">                               
+            <input @click.prevent="processMail" type="submit" class="submit" value="submit">
+            <i class="fa fa-paper-plane-o" aria-hidden="true"></i>                              
         </form>
     </main>
 
