--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 
         <h2 class="mail-header">Processing Mail with AJAX</h2>
 
-        <form action="index.php" method="POST" id="mail-form">
+        <form action="mail.php" method="POST" id="mail-form">
             <label for="firstname">First Name</label>
-            <input ref="fname" type="text" id="firstname" name="firstname" placeholder="first name" required="required">
+            <input ref="fname" type="text" id="firstname" name="firstname" required="required">
 
             <label for="lastname">Last Name</label>
-            <input ref="lname" type="text" id="lastname" name="lastname" placeholder="last name" required>
+            <input ref="lname" type="text" id="lastname" name="lastname" required>
 
             <label for="firstname">Email</label>
-            <input ref="email" type="email" id="email" name="email" placeholder="email" required>
+            <input ref="email" type="email" id="email" name="email" required>
 
             <label for="message">Your Message</label>
             <textarea ref="message" name="message" id="message" cols="30" rows="10"></textarea>
@@ -36,8 +36,10 @@
             <label for="phone">Your Phone # <i>(optional)</i></label>
             <input ref="phone" type="tel" value="tel" name="phone">
             
-            <input @click.prevent="processMail" type="submit" class="submit" value="submit">
-            <i class="fa fa-paper-plane-o" aria-hidden="true"></i>                              
+            <div class="wrapper">
+                <input @click.prevent="processMail" type="submit" class="submit" value="Go!">
+                <i class="fas fa-paper-plane"></i>
+            </div>                              
         </form>
     </main>
 
